# nitomoe

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/js/: api.js  sidebar.js  toaster.js
assets/js/service/: post.js  thread.js
assets/scss/: _mobile.scss  _variables.scss  app.scss  auth.scss
dev/: docker-compose.yml
migrations/2022-09-25-215913_create_trigger_set_timestamp/: down.sql  up.sql
migrations/2022-09-25-220035_create_boards/: down.sql  up.sql
migrations/2022-09-25-220625_create_threads/: down.sql  up.sql
migrations/2022-09-25-220730_create_posters/: down.sql  up.sql
migrations/2022-09-25-220828_create_posts/: down.sql  up.sql
migrations/2022-09-26-000836_create_files/: down.sql  up.sql
src/: db.rs  env.rs  error.rs  main.rs  schema.rs
src/handlers/: api_handler.rs  assets_handler.rs  mod.rs
src/models/: board.rs  file.rs  mod.rs  post.rs  poster.rs  thread.rs
src/service/: board_service.rs  file_service.rs  mod.rs  post_service.rs  poster_service.rs  thread_service.rs
src/templates/: board_template.rs  index_template.rs  mod.rs  not_found_template.rs
templates/: board.html  index.html
templates/errors/: 404.html
templates/layouts/: app.html
templates/partials/: sidebar.html
