[package]
name = "nitomoe"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
log = "0.4.0"
env_logger = "0.9.0"
askama = "0.10"

[build-dependencies]
grass = "0.11.2"