[package]
name = "nitomoe"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.22"
lazy_static = "1.4.0"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.9.0"
askama = "0.10"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
grass = "0.11.2"